Hot-fix for off-center header issue

--- a/css/siteWide.css
+++ b/css/siteWide.css
@@ -109,7 +109,7 @@ a {
 }
 
 .nav-bar-opposition-wrapper {
-  width: 30%;
+  width: 40%;
 }
 
 .hamburger {
